--- a/diapos/VariabilidadCentralFV.org
+++ b/diapos/VariabilidadCentralFV.org
@@ -105,21 +105,21 @@ demanda.
 En este contexto, el reto no es tanto la variabilidad como la
 *predicción*:
 
-- La realización de predicciones en horizontes horarios o diarios de
+- La realización de *predicciones en horizontes horarios o diarios* de
   la potencia generada por un sistema fotovoltaico o por un grupo de
-  sistemas es crucial para facilitar la integración de sistemas
+  sistemas es *crucial para facilitar la integración* de sistemas
   fotovoltaicos en redes eléctricas.
 
 - La predicción de radiación solar y potencia de sistemas
-  fotovoltaicos es un área de investigación de plena actualidad.
+  fotovoltaicos es un *área de investigación de plena actualidad*.
 
 ** Ejemplo: proyecto europeo PVCROPS
-  - Herramienta de aprendizaje automático o /machine learning/
-    entrenada con series históricas de predicciones NWP y medidas de
-    potencia eléctrica (30 días en la serie temporal de
+  - Herramienta de *aprendizaje automático* o /machine learning/
+    entrenada con *series históricas* de *predicciones NWP* y *medidas de
+    potencia eléctrica* (30 días en la serie temporal de
     entrenamiento)[fn:9].
-  - Predicción de potencia AC con resolución horaria y un horizonte
-    temporal de 1 día.
+  - *Predicción de potencia AC* con resolución *horaria* y un horizonte
+    temporal de *1 día*.
 
    
   #+ATTR_LATEX: :height 0.6\textheight
@@ -127,10 +127,9 @@ En este contexto, el reto no es tanto la variabilidad como la
 
 ** Ejemplo: proyecto europeo PVCROPS
 
-
-  Se emplean como entradas las predicciones de variables
-  meteorológicas generadas por modelos de predicción meteorológica
-  numérica e índices de variación espacial y temporal estimados con
+  Se emplean como entradas las predicciones de *variables
+  meteorológicas* generadas por modelos de predicción meteorológica
+  numérica e *índices de variación espacial y temporal* estimados con
   las variables meteorológicas.
    
   #+ATTR_LATEX: :height 0.7\textheight
@@ -139,7 +138,7 @@ En este contexto, el reto no es tanto la variabilidad como la
     
 ** Ejemplo: proyecto europeo PVCROPS
 
-Genera predicciones probabilísticas, entregando tanto la mediana de la
+Genera *predicciones probabilísticas*, entregando tanto la mediana de la
 predicción como un intervalo de confianza, que permite cuantificar la
 fiabilidad de la predicción, y que puede servir como medida indirecta
 de la variabilidad futura.
@@ -155,7 +154,10 @@ http://vps156.cesvima.upm.es:3838/predictPac/
 ** Predicciones agregadas
 
 Las predicciones obtenidas mejoran cuando las predicciones se aplican
-a un conjunto de sistemas.
+a un conjunto de sistemas.[fn:10]
+
+#+ATTR_LATEX: :height 0.7\textheight
+[[file:../figs/ForecastEnsembleErrorReduction.png]]
   
 * Variabilidad de la Potencia
 
@@ -236,11 +238,11 @@ Escalas temporales altas, $\tau > \qty{20}{\min}$: correlaciones altas y positiv
 #+end_export
 
 ** Normativas de red
-- La variabilidad en escalas de tiempo bajas puede influir en mayor o
-  menor medida en el funcionamiento de la red eléctrica.
-- Existencia de normativas y recomendaciones para la integración de
+- La *variabilidad* en escalas de tiempo bajas *puede influir* en mayor o
+  menor medida en el *funcionamiento de la red eléctrica*.
+- Existencia de *normativas y recomendaciones* para la integración de
   sistemas fotovoltaicos en la red.
-- Ejemplo clásico: Autoridad Eléctrica de Puerto Rico incluye en su
+- *Ejemplo clásico*: Autoridad Eléctrica de Puerto Rico incluye en su
   normativa el concepto de rampa para cuantificar las fluctuaciones
   admisibles:
 
@@ -249,14 +251,14 @@ A 10% per minute rate (based on AC contracted capacity) limitation shall be enfo
 #+end_quote
 
 ** Definiciones de rampas
-Uno de los problemas principales en este requerimiento (y otros similares) es que, aunque es fácil identificar visualmente una rampa en una serie temporal de potencia, no existe consenso en una definición formal que permita identificarla y cuantificarla.
+Uno de los problemas principales en este requerimiento (y otros similares) es que, aunque *es fácil identificar visualmente una rampa* en una serie temporal de potencia, *no existe consenso en una definición formal* que permita identificarla y cuantificarla.
 
 ** Ejemplos de definiciones de rampas
 
 - Existe una rampa al inicio de un intervalo temporal si la magnitud del cambio en un instante temporal posterior es mayor que un umbral predeterminado.
 #+begin_export latex
 \[ 
-\left| P(t +\Delta_t) - P(t)\right| > \tau
+\left| P(t +\Delta_t) - P(t)\right| > \psi
 \]
 #+end_export  
 
@@ -265,14 +267,14 @@ Uno de los problemas principales en este requerimiento (y otros similares) es qu
 #+begin_export latex
   \[
   \max(\{P_t: t = t_0, \dots, t_0+\Delta_t\}) - \min(\{P_t: t=t_0,
-  \dots, t_0+\Delta_t\}) > \tau
+  \dots, t_0+\Delta_t\}) > \psi
   \]
 #+end_export
 
 - Existe una rampa dentro de un intervalo si el ratio entre el valor absoluto de la diferencia entre las medidas de potencia en dos instantes temporales, y la longitud del intervalo supera un determinado umbral.
 #+begin_export latex
   \[
-  \frac{\left|P(t + \Delta_t) - P(t)\right|}{\Delta_t} > \tau
+  \frac{\left|P(t + \Delta_t) - P(t)\right|}{\Delta_t} > \psi
   \]
 #+end_export  
 
@@ -296,10 +298,10 @@ La limitación de las rampas de los sistemas fotovoltaicos es un
 requerimiento que se debe afrontar, principalmente en el caso de las
 centrales fotovoltaicas de gran tamaño.
 
-Existen tres estrategias principales:
-- el uso de sistemas de acumulación energética;
-- acumulación energética combinada con predicción de rampas;
-- predicción de rampas sin acumulación.
+Existen *tres estrategias* principales:
+- el uso de *sistemas de acumulación* energética;
+- *acumulación* energética combinada *con predicción* de rampas;
+- *predicción* de rampas *sin acumulación*.
 
 * Sistemas de Acumulación 
 
@@ -340,6 +342,11 @@ Un pulso de irradiancia se transforma en una exponencial decreciente (la central
 ** Modelo de la peor fluctuación
 
 El sistema de acumulación regula la potencia de salida para limitar la rampa. 
+#+begin_export latex
+\[
+  P_{bat} = P_{lim} - P_{FV}
+\]
+#+end_export
 
 #+ATTR_LATEX: :height 0.75\textheight
 [[file:../figs/ModeloPeorFluctuacion.pdf]]
@@ -369,7 +376,7 @@ El sistema de acumulación regula la potencia de salida para limitar la rampa.
 \]
 #+end_export
 
-- $\tau [\unit{\second}]$: constante de tiempos de la fluctuación
+- $\tau [\unit{\second}]$: constante de tiempo de la fluctuación
 - $L_{min} [\unit{\kilo\meter}]$: dimensión menor de la central
   
 ** Modelo de la peor fluctuación
@@ -442,8 +449,14 @@ Resultados:
 
 ** Tecnologías de acumulación[fn:1]
 
-#+ATTR_LATEX: :width \textwidth
-[[file:../figs/ComparativaTecnologiasAcumulacion.png]]
+#+begin_export latex
+      \begin{center}
+        \begin{tikzpicture}
+          \node[anchor=south west,inner sep=0] at (0,0) {\includegraphics[height=0.5\textheight]{../figs/ComparativaTecnologiasAcumulacion.png}};
+            \draw[red,ultra thick,rounded corners] (7,0) rectangle (8.2, 0.5\textheight);
+          \end{tikzpicture}
+        \end{center}
+#+end_export
 
 ** Tecnologías de acumulación[fn:2]
 
@@ -454,23 +467,25 @@ Resultados:
 
 Los sistemas de acumulación pueden proporcionar servicios adicionales[fn:3]:
 
-- Regulación de frecuencia: mantener la frecuencia de la red dentro de unos límites.
-- Emulación de inercia: evitar cambios rápidos tras una descompensación de potencia.
-- /Black start/: recuperar el sistema eléctrico después de un apagón.
-- /Capacity Firming/: mantener el nivel de generación durante un período de tiempo.
-- /Arbitrage/ o /time-shift/: comprar energía cuando es barata, vender cuando es cara.
+- *Regulación de frecuencia*: mantener la frecuencia de la red dentro de unos límites.
+- *Emulación de inercia*: evitar cambios rápidos tras una descompensación de potencia.
+- */Black start/*: recuperar el sistema eléctrico después de un apagón.
+- */Capacity Firming/*: mantener el nivel de generación durante un período de tiempo.
+- */Arbitrage/* o /time-shift/: comprar energía cuando es barata, vender cuando es cara.
   
 * Footnotes
-[fn:9]http://dx.doi.org/10.1016/j.solener.2015.03.006 
 
-[fn:8]https://doi.org/10.3390/solar2010003 
-[fn:7]http://dx.doi.org/10.1016/j.solener.2012.1 
+[fn:10]https://dx.doi.org/10.1002/pip.1033 
+[fn:9]https://dx.doi.org/10.1016/j.solener.2015.03.006 
 
-[fn:6]https://doi.org/10.1002/pip.1127 
-[fn:5]https://doi.org/10.1002/pip.1016 
+[fn:8]https://dx.doi.org/10.3390/solar2010003 
+[fn:7]https://dx.doi.org/10.1016/j.solener.2012.12.004
 
-[fn:4]http://dx.doi.org/10.1016/j.solener.2013.10.037 
-[fn:3]https://doi.org/10.1016/j.apenergy.2020.115213 
+[fn:6]https://dx.doi.org/10.1002/pip.1127 
+[fn:5]https://dx.doi.org/10.1002/pip.1016 
 
-[fn:1] EASE-EERA Energy Storage Technology Development Roadmap
-[fn:2] http://dx.doi.org/10.1016/j.apenergy.2014.09.081
+[fn:4]https://dx.doi.org/10.1016/j.solener.2013.10.037 
+[fn:3]https://dx.doi.org/10.1016/j.apenergy.2020.115213 
+
+[fn:1] [[https://ease-storage.eu/publication/ease-eera-energy-storage-technology-development-roadmap-2017/][EASE-EERA Energy Storage Technology Development Roadmap]]
+[fn:2] https://dx.doi.org/10.1016/j.apenergy.2014.09.081
